data/forge_javadoc/1.8.9/processed/net_minecraft_world_gen_structure_StructureVillagePieces.House4Garden.md
# StructureVillagePieces.House4Garden

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.House4Garden

## Class signature

```java
public static class StructureVillagePieces.House4Garden extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World worldIn, java.util.Random randomIn, StructureBoundingBox structureBoundingBoxIn)` — second Part of Structure generating, this for example places Spiderwebs, Mob Spawners, it closes Mineshafts at the end, it adds Fences...
- `static StructureVillagePieces.House4Garden func_175858_a(StructureVillagePieces.Start start, java.util.List<StructureComponent> p_175858_1_, java.util.Random rand, int p_175858_3_, int p_175858_4_, int p_175858_5_, EnumFacing facing, int p_175858_7_)`
- `protected void readStructureFromNBT(NBTTagCompound tagCompound)` — (abstract) Helper method to read subclass data from NBT
- `protected void writeStructureToNBT(NBTTagCompound tagCompound)` — (abstract) Helper method to write subclass data to NBT

## Fields

- `House4Garden`
- `House4Garden`